--- a/src/styles/ParticipantDashboard.css
+++ b/src/styles/ParticipantDashboard.css
@@ -33,6 +33,7 @@
 .participant-header .logo .app-logo {
   height: 40px;
   width: auto;
+  filter: brightness(0) invert(1);
 }
 
 .participant-header .search-bar {
